--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@tsparticles/all": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
+    "@vercel/analytics": "^1.5.0",
     "cra-template": "1.2.0",
     "motion": "^11.15.0",
     "normalize.css": "^8.0.1",
